--- a/README
+++ b/README
@@ -31,4 +31,4 @@ Notes For Mac Users:
 A) As is, make must be in your PATH. If 10.7 this is not the case by default. The make binary is located in /Developer/usr/bin. To add this to your path, follow the steps below:
 cd /etc/paths.d
 touch devpath
-"Now open devpath and add /Developer/usr/bin (followed by a newline) to the file. Close and save"
+"Now open devpath and add /Developer/usr/bin (followed by a newline) to the file. Save and close"
